--- a/angular-workspace/todo/src/index.html
+++ b/angular-workspace/todo/src/index.html
@@ -7,7 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="m-1 p-1">
+<h3 class="bg-primary text-white p-3">Myron's To Do List</h3>
+<div class="my-1">
+  <input class="form-control" />
+  <button class="btn btn-primary mt-1">Add</button>
+</div>
+<table class="table table-striped table-bordered">
+  <thead>
+  <tr>
+    <th>Description</th>
+    <th>Done</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr><td>Buy underwear</td><td>No</td></tr>
+  <tr><td>Get socks</td><td>No</td></tr>
+  <tr><td>Collect rash</td><td>Yes</td></tr>
+  <tr><td>Call Myrtle</td><td>No</td></tr>
+  </tbody>
+</table>
 </body>
 </html>
