--- a/angular-workspace/todo/src/index.html
+++ b/angular-workspace/todo/src/index.html
@@ -8,24 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body class="m-1 p-1">
-<h3 class="bg-primary text-white p-3">Myron's To Do List</h3>
-<div class="my-1">
-  <input class="form-control" />
-  <button class="btn btn-primary mt-1">Add</button>
-</div>
-<table class="table table-striped table-bordered">
-  <thead>
-  <tr>
-    <th>Description</th>
-    <th>Done</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr><td>Buy underwear</td><td>No</td></tr>
-  <tr><td>Get socks</td><td>No</td></tr>
-  <tr><td>Collect rash</td><td>Yes</td></tr>
-  <tr><td>Call Myrtle</td><td>No</td></tr>
-  </tbody>
-</table>
+  <app-todo>Angular Placeholder</app-todo>
 </body>
 </html>
